<resources>

    <string name="app_name">天气</string>
    <string name="left_slide_menu">功能菜单</string>
    <string name="left_slide_menu_setting">\u0020设置</string>
    <string name="left_slide_menu_skin">\u0020皮肤</string>
    <string name="left_slide_citylist">城市列表</string>
    <string name="left_slide_city_setting">编辑</string>
    <string name="left_slide_city_complete">完成</string>
    <string name="left_slide_city_remove">删除</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    
    <!-- 当前天气 -->
    <string name="forecast_city_name">城市</string>
    <string name="forecast_current_wendu">当前温度</string>
    <string name="forecast_current_fengxiang">风向</string>
    <string name="forecast_current_fengli">风力</string>
    <string name="forecast_current_shidu">湿度</string>
    <string name="forecast_current_update_time">发布时间</string>
    <string name="forecast_alarm">天气预警</string>
    <string name="forecast_index">指数</string>
    
    <!-- 各种指数 -->
    <string name="today_index_gm">感冒指数</string>
    <string name="today_index_zwx">紫外线</string>
    <string name="today_index_cy">穿衣指数</string>
    <string name="today_index_ss">舒适度</string>
    <string name="today_index_xc">洗车指数</string>
    <string name="today_index_ly">旅游指数</string>
    <string name="today_index_yd">运动指数</string>
    <string name="today_index_cl">晨练指数</string>
    <string name="today_index_yh">约会指数</string>
    <string name="today_index_gj">逛街指数</string>
    <string name="today_index_ls">晾晒指数</string>
    <string name="today_index_ys">雨伞指数</string>

    <string name="city_filter_hint">输入城市名称</string>
    <string name="city_hot_city">热门城市</string>
    <string name="city_filter_noresult">没有找到对应城市</string>
    <string name="city_auto_location_hint">正在定位</string>
    <string name="city_auto_location_error">自动定位失败</string>
    
    <string name="alert_title_setting_gps">提示</string>
    <string name="alert_message_setting_gps">打开GPS可以提高定位准确度，是否打开GPS？</string>
    <string name="alert_positive_setting_gps">确认</string>
    <string name="alert_negative_setting_gps">取消</string>

    <string name="widget_no_city">还没有设置城市，点击设置</string>
</resources>
