<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <EditText
        android:id="@+id/et_city_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dip"
        android:hint="@string/city_filter_hint"
        android:singleLine="true" />

    <RelativeLayout
        android:id="@+id/rl_hot_city"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/et_city_filter"
        android:layout_margin="10dip"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_hot_city_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_hot_city"
            android:textSize="20dp" />

        <GridView
            android:id="@+id/gv_hot_city"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_hot_city_title"
            android:layout_marginTop="20dip"
            android:columnWidth="80dip"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth">

        </GridView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_filter_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/et_city_filter"
        android:layout_margin="10dip"
        android:visibility="visible">
        <TextView
            android:id="@+id/tv_city_filter_noresult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/city_filter_noresult"
            android:textSize="20dp"
            android:visibility="gone"/>
        <ListView
            android:id="@+id/lv_city_filter_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>