<?xml version="1.0" encoding="utf-8"?>
<com.ggcoke.weatherdemo.view.ForecastLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <!-- 城市名称 -->
            <LinearLayout
                android:id="@+id/ll_city_name"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5.0dip">

                <TextView
                    android:layout_width="70.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forecast_city_name"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />

                <TextView
                    android:id="@+id/tv_city_name"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5.0dip"
                    android:background="@null"
                    android:gravity="center"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />
            </LinearLayout>

            <!-- 温度 -->
            <LinearLayout
                android:id="@+id/ll_current_wendu"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5.0dip"
                android:layout_below="@id/ll_city_name">

                <TextView
                    android:layout_width="70.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forecast_current_wendu"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />

                <TextView
                    android:id="@+id/tv_current_wendu"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5.0dip"
                    android:background="@null"
                    android:gravity="center"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />
            </LinearLayout>

            <!-- 风向 -->
            <LinearLayout
                android:id="@+id/ll_current_fengxiang"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5.0dip"
                android:layout_below="@id/ll_current_wendu">

                <TextView
                    android:layout_width="70.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forecast_current_fengxiang"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />

                <TextView
                    android:id="@+id/tv_current_fengxiang"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5.0dip"
                    android:background="@null"
                    android:gravity="center"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />
            </LinearLayout>

            <!-- 风力 -->
            <LinearLayout
                android:id="@+id/ll_current_fengli"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5.0dip"
                android:layout_below="@id/ll_current_fengxiang">

                <TextView
                    android:layout_width="70.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forecast_current_fengli"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />

                <TextView
                    android:id="@+id/tv_current_fengli"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5.0dip"
                    android:background="@null"
                    android:gravity="center"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />
            </LinearLayout>

            <!-- 湿度 -->
            <LinearLayout
                android:id="@+id/ll_current_shidu"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5.0dip"
                android:layout_below="@id/ll_current_fengli">

                <TextView
                    android:layout_width="70.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forecast_current_shidu"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />

                <TextView
                    android:id="@+id/tv_current_shidu"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5.0dip"
                    android:background="@null"
                    android:gravity="center"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />
            </LinearLayout>
            <!-- 天气预警 -->
            <LinearLayout
                android:id="@+id/ll_current_alarm"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5.0dip"
                android:layout_below="@id/ll_current_shidu">

                <TextView
                    android:layout_width="70.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forecast_alarm"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />

                <TextView
                    android:id="@+id/tv_current_alarm"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5.0dip"
                    android:background="@null"
                    android:gravity="center"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />
            </LinearLayout>
            <!-- 更新时间 -->
            <LinearLayout
                android:id="@+id/ll_update_time"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5.0dip"
                android:layout_below="@id/ll_current_alarm">

                <TextView
                    android:layout_width="70.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forecast_current_update_time"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />

                <TextView
                    android:id="@+id/tv_update_time"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5.0dip"
                    android:background="@null"
                    android:gravity="center"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />
            </LinearLayout>

            <!-- 感冒指数 -->
            <LinearLayout
                android:id="@+id/ll_index"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5.0dip"
                android:layout_below="@id/ll_update_time">

                <TextView
                    android:layout_width="70.0dip"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forecast_index"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />

                <TextView
                    android:id="@+id/tv_index"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:background="@null"
                    android:textColor="@color/white_color"
                    android:textSize="14.0dip" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</com.ggcoke.weatherdemo.view.ForecastLayout>